--- a/style.css
+++ b/style.css
@@ -5,9 +5,18 @@
 }
 
 body {
-  background-color: #fed7aa;
+  background-color: azure;
   color:rgb(98, 5, 98);
   font-family: "Merriweather", serif;
+  padding: 48px 60px;
+}
+
+/* layout */
+
+.container {
+  max-width: 1000px;
+  background-color: #fed7aa;
+  margin: 0 auto;
 }
 
 .header {
@@ -22,6 +31,11 @@ body {
   gap: 16px;
 }
 
+.logo img {
+  width: 68px;
+  height: 68px;
+}
+
 .main-form {
   background-color: #fee2e2;
   margin-bottom: 40px;
@@ -30,14 +44,18 @@ body {
 
 }
 
+.main {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  gap: 48px
+}
+
 h1 {
   font-size: 42px;
   text-transform: uppercase; 
   text-align: center;
   color: rgb(98, 5, 98);
   line-height: 1;
-  
-
 }
 
 .info {
@@ -46,12 +64,20 @@ h1 {
   background-color: #fee2e2;
   margin-bottom: 16px;
   padding: 16px 30px;
+  letter-spacing: -1px;
   border: 4px solid purple;
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
 
 .tag {
   text-transform: lowercase;
   font-size: 14px;
+}
+
+.vote-buttons {
+  margin-left: auto;
 }
 
 ul {
