--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ h1 {
   line-height: 1;
 }
 
+.category {
+  margin-bottom: 16px;;
+}
+
 .info {
   font-size: 20px;
   line-height: 1.4;
@@ -82,4 +86,53 @@ h1 {
 
 ul {
   list-style: none;
+}
+
+.source:link {
+  color:rgb(113, 215, 140);
+  text-decoration: none;
+  margin-left: 12px;
+  transition: 1s;
+}
+
+.source:visited {
+  color: purple;
+}
+
+.source:hover {
+  color: blue;
+}
+
+.source:active {
+  color: magenta;
+}
+
+.btn {
+  border: none;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  line-height: 1;
+  font-size: 17px;
+  text-transform: uppercase;
+  padding: 16px 0 13px;
+  background-image: linear-gradient(135deg, purple, rgb(196, 242, 242), lemonchiffon, rgb(180, 223, 180));
+  transition: 0.3s;
+}
+
+.btn:hover {
+  transform: scale(110%) rotate(-2deg);
+}
+
+.btn-large {
+  font-size: 20px;
+  padding: 20px 32px 17px;
+}
+
+.btn-all-categories {
+  margin-bottom: 16px;
+  width: 100%;
+}
+
+.btn-category {
+  width: 100%;
+  background-image: none;
 }
